syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message HelloResp {
    string id = 1;
    string salutation = 2;
    string subject = 3;
    google.protobuf.Timestamp created = 4;
    google.protobuf.Timestamp updated = 5;
    google.protobuf.Timestamp deleted = 6;
}

message AddHelloReq {
    string salutation = 1;
    string subject = 2;
}

message OvrHelloReq {
    string id = 1;
    AddHelloReq req = 2;
}

message RmvHelloResp {

}

message RmvHelloReq {
    string id = 1;
}

message HellosResp {
    repeated HelloResp items = 1;
    uint32 total = 2;
}

message FndHellosReq {
    repeated string ids = 1;
    repeated string salutations = 2;
    uint32 limit = 3;
    uint32 lapse = 4;
}

service Hello {
    rpc AddHello(AddHelloReq) returns (HelloResp) {
        option(google.api.http) = {
            post: "/hello"
            body: "*"
        };
    }

    rpc OvrHello(OvrHelloReq) returns (HelloResp) {
        option(google.api.http) = {
            put: "/hello/{id}"
            body: "*"
        };
    }

    rpc RmvHello(RmvHelloReq) returns (RmvHelloResp) {
        option(google.api.http) = {
            delete: "/hello/{id}"
        };
    }

    rpc FndHellos(FndHellosReq) returns (HellosResp) {
        option(google.api.http) = {
            get: "/hellos"
        };
    }
}
